syntax = "proto3";
package orderbook;

service OrderbookAggregator {
    rpc BookSummary(Empty) returns (stream Summary);
    rpc BookSummaryCustom(CustomArgs) returns (stream Summary);
}

message Empty {}

message CustomArgs {
    string name = 1;
    repeated string exchange_idents = 2;
}

message Summary {
    double spread = 1;
    repeated Level bids = 2;
    repeated Level asks = 3;
}

message Level {
    string exchange = 1;
    double price = 2;
    double amount = 3;
}